--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <div id="blueRectangle"></div>
 <div id="circle"></div>
-<img id = "Crest" src="C:\Users\Vikki\Desktop\Detail\Images\crestpainnet.gif" alt Crest image>
+<img id = "Crest" src="crestpainnet.gif" alt Crest image>
 <div id= "title">
          Appliance Availability
       </div>
@@ -266,15 +266,15 @@ function closeFullscreen() {
 <tr>
 
 		<td>
-			<img id="Fire 1" src="C:\Users\Vikki\Desktop\Detail\Images\Fire 1.png" alt Fire 1 image>
+			<img id="Fire 1" src="Fire 1.png" alt Fire 1 image>
 		</td>
 
 		<td>
-			<img id = "Fire 2" src="C:\Users\Vikki\Desktop\Detail\Images\Fire 2.png" alt Fire 2 image>
+			<img id = "Fire 2" src="Fire 2.png" alt Fire 2 image>
 		</td>
 
 		<td>
-			<img id = "Fire 3" src="C:\Users\Vikki\Desktop\Detail\Images\Fire 3.png" alt Fire 3 image>
+			<img id = "Fire 3" src="Fire 3.png" alt Fire 3 image>
 		</td>
 	</tr>
 
