--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@ setInterval(updateDateTime, 1000)
    
   <tr Style = "height: 82px">
 	<td style='width:39px'></td>
-	<td style='width:248px' align="center" ><img id="Fire 1" src=Fire 1.png" width=220px height=86px alt Fire 1 image></td>
+	<td style='width:248px' align="center" ><img id="Fire 1" src="images/Fire 1.png" width=220px height=86px alt Fire 1 image></td>
 	<td style='width:70px'></td>
 	<td style='width:248px'align="center" ><img id = "Fire 2" src="C:\Users\Vikki\Desktop\Detail\Images\Fire 2.png" align="center" width=256px height=82px alt Fire 2 image></td>
 	<td style='width:70px'></td>
