--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@ setInterval(updateDateTime, 1000)
    
   <tr Style = "height: 82px">
 	<td style='width:39px'></td>
-	<td style='width:248px' align="center" ><img id="Fire 1" src="https://github.com/Con1139/Detail/blob/main/Fire1.png?raw=true" width=220px height=86px alt Fire 1 image></td>
+	<td style='width:248px' align="center" ><img id="Fire 1" src="images/Fire1.png" width=220px height=86px alt Fire 1 image></td>
 	<td style='width:70px'></td>
 	<td style='width:248px'align="center" ><img id = "Fire 2" src="/images/Fire2.png" align="center" width=256px height=82px alt Fire 2 image></td>
 	<td style='width:70px'></td>
