--- a/index.html
+++ b/index.html
@@ -507,8 +507,8 @@ position: relative;
 <div id= "title">Appliance Availability</div>
 <div id= "BCA">Belfast City Airport <p> Fire & Rescue Service</div>
 
-<img id = "crest" src="/crestpainnet.gif" alt Crest image>
-<img id = "largecrest" src="/crestpainnet.gif" alt large Crest image>
+<img id = "crest" src="images/crestpainnet.gif" alt Crest image>
+<img id = "largecrest" src="images/crestpainnet.gif" alt large Crest image>
 
 <select name="Watch" id="Watch">
 
@@ -534,13 +534,13 @@ setInterval(updateDateTime, 1000)
    
   <tr Style = "height: 82px">
 	<td style='width:39px'></td>
-	<td style='width:248px' align="center" ><img id="Fire 1" src="/Fire1.png" width=220px height=86px alt Fire 1 image></td>
+	<td style='width:248px' align="center" ><img id="Fire 1" src="images/Fire1.png" width=220px height=86px alt Fire 1 image></td>
 	<td style='width:70px'></td>
-	<td style='width:248px'align="center" ><img id = "Fire 2" src="/images/Fire2.png" align="center" width=256px height=82px alt Fire 2 image></td>
+	<td style='width:248px'align="center" ><img id = "Fire 2" src="images/Fire2.png" align="center" width=256px height=82px alt Fire 2 image></td>
 	<td style='width:70px'></td>
 	<td style='width:248px' align="center"><img id ="Fire 3" src="images/Fire3.png" align="center" width=256px height=82px alt Fire 3 image></td>
 	<td style='width:70px'></td>
-	<td style='width:248px' align="center"><img id = "Fire 5" src="/Fire5.png" align="center" width=190px height=75px alt Fire 5 image></td>
+	<td style='width:248px' align="center"><img id = "Fire 5" src="images/Fire5.png" align="center" width=190px height=75px alt Fire 5 image></td>
 	<td style='width:39px'></td>
   </tr>
   
