--- a/index.html
+++ b/index.html
@@ -507,8 +507,8 @@ position: relative;
 <div id= "title">Appliance Availability</div>
 <div id= "BCA">Belfast City Airport <p> Fire & Rescue Service</div>
 
-<img id = "crest" src="images/crestpainnet.gif" alt Crest image>
-<img id = "largecrest" src="images/crestpainnet.gif" alt large Crest image>
+<img id = "crest" src="crestpainnet.gif" alt Crest image>
+<img id = "largecrest" src="crestpainnet.gif" alt large Crest image>
 
 <select name="Watch" id="Watch">
 
