--- a/index.html
+++ b/index.html
@@ -534,9 +534,9 @@ setInterval(updateDateTime, 1000)
    
   <tr Style = "height: 82px">
 	<td style='width:39px'></td>
-	<td style='width:248px' align="center" ><img id="Fire 1" src="Fire1.PNG" width=220px height=86px alt Fire 1 image></td>
+	<td style='width:248px' align="center" ><img id="Fire 1" src="Fire1.png" width=220px height=86px alt Fire 1 image></td>
 	<td style='width:70px'></td>
-	<td style='width:248px'align="center" ><img id = "Fire 2" src="Fire2.PNG" align="center" width=256px height=82px alt Fire 2 image></td>
+	<td style='width:248px'align="center" ><img id = "Fire 2" src="Fire2.png" align="center" width=256px height=82px alt Fire 2 image></td>
 	<td style='width:70px'></td>
 	<td style='width:248px' align="center"><img id ="Fire 3" src="Fire3.png" align="center" width=256px height=82px alt Fire 3 image></td>
 	<td style='width:70px'></td>
@@ -1528,8 +1528,6 @@ setInterval(updateDateTime, 1000)
 	<td style='width:39px' ></td>
   </tr>
 </table>
-<p>
-<p>
 <p>
 <p>
 <marquee behaviour = "scroll" direction="left" id="info">
