--- a/index.html
+++ b/index.html
@@ -555,6 +555,7 @@ setInterval(updateDateTime, 1000)
 <option value="VOR">VOR</option>
 <option value="Fire 2">Fire 2</option>
 <option value="Fire 3">Fire 3</option>
+<option value="Fire 4">Fire 4</option>		
 <option value="Fire 5">Fire 5</option>
 
 </td>
@@ -564,10 +565,11 @@ setInterval(updateDateTime, 1000)
 	<td style='width:248px'>
 	<select name="Vehicle" id="Vehicle">
 
-<option value="Fire 1">Fire 2</option>
+<option value="Fire 2">Fire 2</option>
 <option value="VOR">VOR</option>
-<option value="Fire 2">Fire 3</option>
-<option value="Fire 3">Fire 1</option>
+<option value="Fire 3">Fire 3</option>
+<option value="Fire 1">Fire 1</option>
+<option value="Fire 4">Fire 4</option>
 <option value="Fire 5">Fire 5</option>
 
 </td>
@@ -577,10 +579,12 @@ setInterval(updateDateTime, 1000)
 	<td style='width:248px'>
 	<select name="Vehicle" id="Vehicle">
 
-<option value="Fire 1">Fire 3</option>
+<option value="Fire 3">Fire 3</option>
 <option value="VOR">VOR</option>
 <option value="Fire 2">Fire 2</option>
-<option value="Fire 3">Fire 1</option>
+<option value="Fire 4">Fire 4</option>
+<option value="Fire 1">Fire 1</option>
+		
 <option value="Fire 5">Fire 5</option>
 </td>
 
@@ -589,11 +593,12 @@ setInterval(updateDateTime, 1000)
 	<td style='width:248px'>
 	<select name="Vehicle" id="Vehicle">
 
-<option value="Fire 1">Fire 5</option>
+<option value="Fire 5">Fire 5</option>
 <option value="VOR">VOR</option>
-<option value="Fire 2">Fire 1</option>
-<option value="Fire 3">Fire 2</option>
-<option value="Fire 5">Fire 3</option>
+<option value="Fire 2">Fire 2</option>
+<option value="Fire 3">Fire 3</option>
+<option value="Fire 4">Fire 4</option>
+<option value="Fire 1">Fire 1</option>
 
 </td>
 
@@ -676,8 +681,10 @@ setInterval(updateDateTime, 1000)
 <option value="Martin Campbell">	Martin Campbell		</option>
 <option value="Alistair Carmichael">	Alistair Carmichael	</option>
 <option value="Colin Coomber">		Colin Coomber		</option>
+<option value="Aoibh Carroll">		Aoibh Carroll		</option>
 <option value="Tom Crozier">		Tom Crozier		</option>
 <option value="Mick Cullinan">		Mick Cullinan		</option>
+<option value="Nicole Dallat">		Nicole Dallat		</option>
 <option value="Stevie Duncan">		Stevie Duncan		</option>
 <option value="Conor Finch">		Conor Finch		</option>
 <option value="Michael Glover">		Michael Glover		</option>
@@ -701,6 +708,7 @@ setInterval(updateDateTime, 1000)
 <option value="Jim Poole">		Jim Poole		</option>
 <option value="Stevie Rea">		Stevie Rea		</option>
 <option value="Neal Rice">		Neal Rice		</option>
+<option value="Jay Sempey">		Jay Sempey		</option>
 <option value="Colin Surgeoner">	Colin Surgeoner		</option>
 <option value="Tom Todd">		Tom Todd		</option>
 <option value="Damien Wisdom">		Damien Wisdom		</option>
@@ -718,8 +726,10 @@ setInterval(updateDateTime, 1000)
 <option value="Martin Campbell">	Martin Campbell		</option>
 <option value="Alistair Carmichael">	Alistair Carmichael	</option>
 <option value="Colin Coomber">		Colin Coomber		</option>
+<option value="Aoibh Carroll">		Aoibh Carroll		</option>
 <option value="Tom Crozier">		Tom Crozier		</option>
 <option value="Mick Cullinan">		Mick Cullinan		</option>
+<option value="Nicole Dallat">		Nicole Dallat		</option>
 <option value="Stevie Duncan">		Stevie Duncan		</option>
 <option value="Conor Finch">		Conor Finch		</option>
 <option value="Michael Glover">		Michael Glover		</option>
@@ -743,6 +753,7 @@ setInterval(updateDateTime, 1000)
 <option value="Jim Poole">		Jim Poole		</option>
 <option value="Stevie Rea">		Stevie Rea		</option>
 <option value="Neal Rice">		Neal Rice		</option>
+<option value="Jay Sempey">		Jay Sempey		</option>
 <option value="Colin Surgeoner">	Colin Surgeoner		</option>
 <option value="Tom Todd">		Tom Todd		</option>
 <option value="Damien Wisdom">		Damien Wisdom		</option>
@@ -760,8 +771,10 @@ setInterval(updateDateTime, 1000)
 <option value="Martin Campbell">	Martin Campbell		</option>
 <option value="Alistair Carmichael">	Alistair Carmichael	</option>
 <option value="Colin Coomber">		Colin Coomber		</option>
+<option value="Aoibh Carroll">		Aoibh Carroll		</option>
 <option value="Tom Crozier">		Tom Crozier		</option>
 <option value="Mick Cullinan">		Mick Cullinan		</option>
+<option value="Nicole Dallat">		Nicole Dallat		</option>
 <option value="Stevie Duncan">		Stevie Duncan		</option>
 <option value="Conor Finch">		Conor Finch		</option>
 <option value="Michael Glover">		Michael Glover		</option>
@@ -785,11 +798,11 @@ setInterval(updateDateTime, 1000)
 <option value="Jim Poole">		Jim Poole		</option>
 <option value="Stevie Rea">		Stevie Rea		</option>
 <option value="Neal Rice">		Neal Rice		</option>
+<option value="Jay Sempey">		Jay Sempey		</option>
 <option value="Colin Surgeoner">	Colin Surgeoner		</option>
 <option value="Tom Todd">		Tom Todd		</option>
 <option value="Damien Wisdom">		Damien Wisdom		</option>
 </td>
-
 	<td style='width:70px'></td>
 
 	<td style='width:248px'> <select name="Personnel" id="Personnel" >
@@ -801,8 +814,10 @@ setInterval(updateDateTime, 1000)
 <option value="Martin Campbell">	Martin Campbell		</option>
 <option value="Alistair Carmichael">	Alistair Carmichael	</option>
 <option value="Colin Coomber">		Colin Coomber		</option>
+<option value="Aoibh Carroll">		Aoibh Carroll		</option>
 <option value="Tom Crozier">		Tom Crozier		</option>
 <option value="Mick Cullinan">		Mick Cullinan		</option>
+<option value="Nicole Dallat">		Nicole Dallat		</option>
 <option value="Stevie Duncan">		Stevie Duncan		</option>
 <option value="Conor Finch">		Conor Finch		</option>
 <option value="Michael Glover">		Michael Glover		</option>
@@ -826,6 +841,7 @@ setInterval(updateDateTime, 1000)
 <option value="Jim Poole">		Jim Poole		</option>
 <option value="Stevie Rea">		Stevie Rea		</option>
 <option value="Neal Rice">		Neal Rice		</option>
+<option value="Jay Sempey">		Jay Sempey		</option>
 <option value="Colin Surgeoner">	Colin Surgeoner		</option>
 <option value="Tom Todd">		Tom Todd		</option>
 <option value="Damien Wisdom">		Damien Wisdom		</option>
@@ -909,8 +925,10 @@ setInterval(updateDateTime, 1000)
 <option value="Martin Campbell">	Martin Campbell		</option>
 <option value="Alistair Carmichael">	Alistair Carmichael	</option>
 <option value="Colin Coomber">		Colin Coomber		</option>
+<option value="Aoibh Carroll">		Aoibh Carroll		</option>
 <option value="Tom Crozier">		Tom Crozier		</option>
 <option value="Mick Cullinan">		Mick Cullinan		</option>
+<option value="Nicole Dallat">		Nicole Dallat		</option>
 <option value="Stevie Duncan">		Stevie Duncan		</option>
 <option value="Conor Finch">		Conor Finch		</option>
 <option value="Michael Glover">		Michael Glover		</option>
@@ -934,11 +952,11 @@ setInterval(updateDateTime, 1000)
 <option value="Jim Poole">		Jim Poole		</option>
 <option value="Stevie Rea">		Stevie Rea		</option>
 <option value="Neal Rice">		Neal Rice		</option>
+<option value="Jay Sempey">		Jay Sempey		</option>
 <option value="Colin Surgeoner">	Colin Surgeoner		</option>
 <option value="Tom Todd">		Tom Todd		</option>
 <option value="Damien Wisdom">		Damien Wisdom		</option>
 </td>
-
 	<td style='width:70px'></td>
 
 	<td style='width:248px'>
@@ -951,8 +969,10 @@ setInterval(updateDateTime, 1000)
 <option value="Martin Campbell">	Martin Campbell		</option>
 <option value="Alistair Carmichael">	Alistair Carmichael	</option>
 <option value="Colin Coomber">		Colin Coomber		</option>
+<option value="Aoibh Carroll">		Aoibh Carroll		</option>
 <option value="Tom Crozier">		Tom Crozier		</option>
 <option value="Mick Cullinan">		Mick Cullinan		</option>
+<option value="Nicole Dallat">		Nicole Dallat		</option>
 <option value="Stevie Duncan">		Stevie Duncan		</option>
 <option value="Conor Finch">		Conor Finch		</option>
 <option value="Michael Glover">		Michael Glover		</option>
@@ -976,11 +996,11 @@ setInterval(updateDateTime, 1000)
 <option value="Jim Poole">		Jim Poole		</option>
 <option value="Stevie Rea">		Stevie Rea		</option>
 <option value="Neal Rice">		Neal Rice		</option>
+<option value="Jay Sempey">		Jay Sempey		</option>
 <option value="Colin Surgeoner">	Colin Surgeoner		</option>
 <option value="Tom Todd">		Tom Todd		</option>
 <option value="Damien Wisdom">		Damien Wisdom		</option>
 </td>
-
 	<td style='width:70px'></td>
 
 	<td style='width:248px'>
@@ -993,8 +1013,10 @@ setInterval(updateDateTime, 1000)
 <option value="Martin Campbell">	Martin Campbell		</option>
 <option value="Alistair Carmichael">	Alistair Carmichael	</option>
 <option value="Colin Coomber">		Colin Coomber		</option>
+<option value="Aoibh Carroll">		Aoibh Carroll		</option>
 <option value="Tom Crozier">		Tom Crozier		</option>
 <option value="Mick Cullinan">		Mick Cullinan		</option>
+<option value="Nicole Dallat">		Nicole Dallat		</option>
 <option value="Stevie Duncan">		Stevie Duncan		</option>
 <option value="Conor Finch">		Conor Finch		</option>
 <option value="Michael Glover">		Michael Glover		</option>
@@ -1018,11 +1040,11 @@ setInterval(updateDateTime, 1000)
 <option value="Jim Poole">		Jim Poole		</option>
 <option value="Stevie Rea">		Stevie Rea		</option>
 <option value="Neal Rice">		Neal Rice		</option>
+<option value="Jay Sempey">		Jay Sempey		</option>
 <option value="Colin Surgeoner">	Colin Surgeoner		</option>
 <option value="Tom Todd">		Tom Todd		</option>
 <option value="Damien Wisdom">		Damien Wisdom		</option>
 </td>
-
 	<td style='width:70px'></td>
 
 	<td style='width:248px'>
@@ -1035,8 +1057,10 @@ setInterval(updateDateTime, 1000)
 <option value="Martin Campbell">	Martin Campbell		</option>
 <option value="Alistair Carmichael">	Alistair Carmichael	</option>
 <option value="Colin Coomber">		Colin Coomber		</option>
+<option value="Aoibh Carroll">		Aoibh Carroll		</option>
 <option value="Tom Crozier">		Tom Crozier		</option>
 <option value="Mick Cullinan">		Mick Cullinan		</option>
+<option value="Nicole Dallat">		Nicole Dallat		</option>
 <option value="Stevie Duncan">		Stevie Duncan		</option>
 <option value="Conor Finch">		Conor Finch		</option>
 <option value="Michael Glover">		Michael Glover		</option>
@@ -1060,6 +1084,7 @@ setInterval(updateDateTime, 1000)
 <option value="Jim Poole">		Jim Poole		</option>
 <option value="Stevie Rea">		Stevie Rea		</option>
 <option value="Neal Rice">		Neal Rice		</option>
+<option value="Jay Sempey">		Jay Sempey		</option>
 <option value="Colin Surgeoner">	Colin Surgeoner		</option>
 <option value="Tom Todd">		Tom Todd		</option>
 <option value="Damien Wisdom">		Damien Wisdom		</option>
@@ -1143,8 +1168,10 @@ setInterval(updateDateTime, 1000)
 <option value="Martin Campbell">	Martin Campbell		</option>
 <option value="Alistair Carmichael">	Alistair Carmichael	</option>
 <option value="Colin Coomber">		Colin Coomber		</option>
+<option value="Aoibh Carroll">		Aoibh Carroll		</option>
 <option value="Tom Crozier">		Tom Crozier		</option>
 <option value="Mick Cullinan">		Mick Cullinan		</option>
+<option value="Nicole Dallat">		Nicole Dallat		</option>
 <option value="Stevie Duncan">		Stevie Duncan		</option>
 <option value="Conor Finch">		Conor Finch		</option>
 <option value="Michael Glover">		Michael Glover		</option>
@@ -1168,11 +1195,11 @@ setInterval(updateDateTime, 1000)
 <option value="Jim Poole">		Jim Poole		</option>
 <option value="Stevie Rea">		Stevie Rea		</option>
 <option value="Neal Rice">		Neal Rice		</option>
+<option value="Jay Sempey">		Jay Sempey		</option>
 <option value="Colin Surgeoner">	Colin Surgeoner		</option>
 <option value="Tom Todd">		Tom Todd		</option>
 <option value="Damien Wisdom">		Damien Wisdom		</option>
 </td>
-
 	<td style='width:70px'></td>
 
 	<td style='width:248px'><select name="Personnel" id="Personnel" >
@@ -1184,8 +1211,10 @@ setInterval(updateDateTime, 1000)
 <option value="Martin Campbell">	Martin Campbell		</option>
 <option value="Alistair Carmichael">	Alistair Carmichael	</option>
 <option value="Colin Coomber">		Colin Coomber		</option>
+<option value="Aoibh Carroll">		Aoibh Carroll		</option>
 <option value="Tom Crozier">		Tom Crozier		</option>
 <option value="Mick Cullinan">		Mick Cullinan		</option>
+<option value="Nicole Dallat">		Nicole Dallat		</option>
 <option value="Stevie Duncan">		Stevie Duncan		</option>
 <option value="Conor Finch">		Conor Finch		</option>
 <option value="Michael Glover">		Michael Glover		</option>
@@ -1209,6 +1238,7 @@ setInterval(updateDateTime, 1000)
 <option value="Jim Poole">		Jim Poole		</option>
 <option value="Stevie Rea">		Stevie Rea		</option>
 <option value="Neal Rice">		Neal Rice		</option>
+<option value="Jay Sempey">		Jay Sempey		</option>
 <option value="Colin Surgeoner">	Colin Surgeoner		</option>
 <option value="Tom Todd">		Tom Todd		</option>
 <option value="Damien Wisdom">		Damien Wisdom		</option>
@@ -1226,8 +1256,10 @@ setInterval(updateDateTime, 1000)
 <option value="Martin Campbell">	Martin Campbell		</option>
 <option value="Alistair Carmichael">	Alistair Carmichael	</option>
 <option value="Colin Coomber">		Colin Coomber		</option>
+<option value="Aoibh Carroll">		Aoibh Carroll		</option>
 <option value="Tom Crozier">		Tom Crozier		</option>
 <option value="Mick Cullinan">		Mick Cullinan		</option>
+<option value="Nicole Dallat">		Nicole Dallat		</option>
 <option value="Stevie Duncan">		Stevie Duncan		</option>
 <option value="Conor Finch">		Conor Finch		</option>
 <option value="Michael Glover">		Michael Glover		</option>
@@ -1251,11 +1283,11 @@ setInterval(updateDateTime, 1000)
 <option value="Jim Poole">		Jim Poole		</option>
 <option value="Stevie Rea">		Stevie Rea		</option>
 <option value="Neal Rice">		Neal Rice		</option>
+<option value="Jay Sempey">		Jay Sempey		</option>
 <option value="Colin Surgeoner">	Colin Surgeoner		</option>
 <option value="Tom Todd">		Tom Todd		</option>
 <option value="Damien Wisdom">		Damien Wisdom		</option>
 </td>
-
 	<td style='width:70px'></td>
 	<td style='width:248px'>
 	<select name="Personnel" id="Personnel" >
@@ -1267,8 +1299,10 @@ setInterval(updateDateTime, 1000)
 <option value="Martin Campbell">	Martin Campbell		</option>
 <option value="Alistair Carmichael">	Alistair Carmichael	</option>
 <option value="Colin Coomber">		Colin Coomber		</option>
+<option value="Aoibh Carroll">		Aoibh Carroll		</option>
 <option value="Tom Crozier">		Tom Crozier		</option>
 <option value="Mick Cullinan">		Mick Cullinan		</option>
+<option value="Nicole Dallat">		Nicole Dallat		</option>
 <option value="Stevie Duncan">		Stevie Duncan		</option>
 <option value="Conor Finch">		Conor Finch		</option>
 <option value="Michael Glover">		Michael Glover		</option>
@@ -1292,6 +1326,7 @@ setInterval(updateDateTime, 1000)
 <option value="Jim Poole">		Jim Poole		</option>
 <option value="Stevie Rea">		Stevie Rea		</option>
 <option value="Neal Rice">		Neal Rice		</option>
+<option value="Jay Sempey">		Jay Sempey		</option>
 <option value="Colin Surgeoner">	Colin Surgeoner		</option>
 <option value="Tom Todd">		Tom Todd		</option>
 <option value="Damien Wisdom">		Damien Wisdom		</option>
@@ -1373,8 +1408,10 @@ setInterval(updateDateTime, 1000)
 <option value="Martin Campbell">	Martin Campbell		</option>
 <option value="Alistair Carmichael">	Alistair Carmichael	</option>
 <option value="Colin Coomber">		Colin Coomber		</option>
+<option value="Aoibh Carroll">		Aoibh Carroll		</option>
 <option value="Tom Crozier">		Tom Crozier		</option>
 <option value="Mick Cullinan">		Mick Cullinan		</option>
+<option value="Nicole Dallat">		Nicole Dallat		</option>
 <option value="Stevie Duncan">		Stevie Duncan		</option>
 <option value="Conor Finch">		Conor Finch		</option>
 <option value="Michael Glover">		Michael Glover		</option>
@@ -1398,6 +1435,7 @@ setInterval(updateDateTime, 1000)
 <option value="Jim Poole">		Jim Poole		</option>
 <option value="Stevie Rea">		Stevie Rea		</option>
 <option value="Neal Rice">		Neal Rice		</option>
+<option value="Jay Sempey">		Jay Sempey		</option>
 <option value="Colin Surgeoner">	Colin Surgeoner		</option>
 <option value="Tom Todd">		Tom Todd		</option>
 <option value="Damien Wisdom">		Damien Wisdom		</option>
@@ -1414,8 +1452,10 @@ setInterval(updateDateTime, 1000)
 <option value="Martin Campbell">	Martin Campbell		</option>
 <option value="Alistair Carmichael">	Alistair Carmichael	</option>
 <option value="Colin Coomber">		Colin Coomber		</option>
+<option value="Aoibh Carroll">		Aoibh Carroll		</option>
 <option value="Tom Crozier">		Tom Crozier		</option>
 <option value="Mick Cullinan">		Mick Cullinan		</option>
+<option value="Nicole Dallat">		Nicole Dallat		</option>
 <option value="Stevie Duncan">		Stevie Duncan		</option>
 <option value="Conor Finch">		Conor Finch		</option>
 <option value="Michael Glover">		Michael Glover		</option>
@@ -1439,11 +1479,11 @@ setInterval(updateDateTime, 1000)
 <option value="Jim Poole">		Jim Poole		</option>
 <option value="Stevie Rea">		Stevie Rea		</option>
 <option value="Neal Rice">		Neal Rice		</option>
+<option value="Jay Sempey">		Jay Sempey		</option>
 <option value="Colin Surgeoner">	Colin Surgeoner		</option>
 <option value="Tom Todd">		Tom Todd		</option>
 <option value="Damien Wisdom">		Damien Wisdom		</option>
 </td>
-
 	<td style='width:70px'></td>
 	<td style='width:248px'>
 	<select name="Personnel" id="Personnel" >
@@ -1455,8 +1495,10 @@ setInterval(updateDateTime, 1000)
 <option value="Martin Campbell">	Martin Campbell		</option>
 <option value="Alistair Carmichael">	Alistair Carmichael	</option>
 <option value="Colin Coomber">		Colin Coomber		</option>
+<option value="Aoibh Carroll">		Aoibh Carroll		</option>
 <option value="Tom Crozier">		Tom Crozier		</option>
 <option value="Mick Cullinan">		Mick Cullinan		</option>
+<option value="Nicole Dallat">		Nicole Dallat		</option>
 <option value="Stevie Duncan">		Stevie Duncan		</option>
 <option value="Conor Finch">		Conor Finch		</option>
 <option value="Michael Glover">		Michael Glover		</option>
@@ -1480,11 +1522,11 @@ setInterval(updateDateTime, 1000)
 <option value="Jim Poole">		Jim Poole		</option>
 <option value="Stevie Rea">		Stevie Rea		</option>
 <option value="Neal Rice">		Neal Rice		</option>
+<option value="Jay Sempey">		Jay Sempey		</option>
 <option value="Colin Surgeoner">	Colin Surgeoner		</option>
 <option value="Tom Todd">		Tom Todd		</option>
 <option value="Damien Wisdom">		Damien Wisdom		</option>
 </td>
-
 	<td style='width:70px'></td>
 
 	<td style='width:248px'><select name="Personnel" id="Personnel" >
@@ -1496,8 +1538,10 @@ setInterval(updateDateTime, 1000)
 <option value="Martin Campbell">	Martin Campbell		</option>
 <option value="Alistair Carmichael">	Alistair Carmichael	</option>
 <option value="Colin Coomber">		Colin Coomber		</option>
+<option value="Aoibh Carroll">		Aoibh Carroll		</option>
 <option value="Tom Crozier">		Tom Crozier		</option>
 <option value="Mick Cullinan">		Mick Cullinan		</option>
+<option value="Nicole Dallat">		Nicole Dallat		</option>
 <option value="Stevie Duncan">		Stevie Duncan		</option>
 <option value="Conor Finch">		Conor Finch		</option>
 <option value="Michael Glover">		Michael Glover		</option>
@@ -1521,11 +1565,11 @@ setInterval(updateDateTime, 1000)
 <option value="Jim Poole">		Jim Poole		</option>
 <option value="Stevie Rea">		Stevie Rea		</option>
 <option value="Neal Rice">		Neal Rice		</option>
+<option value="Jay Sempey">		Jay Sempey		</option>
 <option value="Colin Surgeoner">	Colin Surgeoner		</option>
 <option value="Tom Todd">		Tom Todd		</option>
 <option value="Damien Wisdom">		Damien Wisdom		</option>
 </td>
-
 	<td style='width:39px' ></td>
   </tr>
 </table>
