--- a/index.html
+++ b/index.html
@@ -355,6 +355,23 @@ color: #002060;;
    animation-iteration-count: infinite;
   }
   
+  #AFSM {
+Position: absolute;
+left: 830px;
+top: 5px;
+z-index: 1;
+text-align: center;
+    	background: White;
+  	font-size: 20px;
+color: #002060;;
+    	height: 20px;
+    	width: 900px;
+			opacity: 0;
+   -webkit-animation: fadeOut 35s 5s 1;
+   animation: fadeOut 35s 5s 1;
+   animation-iteration-count: infinite;
+  }
+  
   @keyframes fadeInOut {
     0% {opacity: 0;}
     28% {opacity: 0;}
@@ -507,6 +524,7 @@ position: relative;
 <div id="Largecircle"></div>
 <div id= "title">Appliance Availability</div>
 <div id= "BCA">Belfast City Airport <p> Fire & Rescue Service</div>
+<div id= "AFSM">Airport Fire Service Manager: Paddy Hughes</div>
 
 <img id = "crest" src="crestpainnet.gif" alt Crest image>
 <img id = "largecrest" src="crestpainnet.gif" alt large Crest image>
@@ -1585,4 +1603,3 @@ setInterval(updateDateTime, 1000)
 
 </body>
 </html>
-
